updated style for correct spacing

--- a/stayorgo/static/css/bootstrap-custom.css
+++ b/stayorgo/static/css/bootstrap-custom.css
@@ -75,6 +75,7 @@
     width: 25px !important;
     height: 25px !important;
     padding: 2px !important;
+    margin-right: 5px;
 }
 
 
